# QtWidgets

./: .gitignore  CMakeLists.txt  README.md
DigitalSignalViewer/: .gitignore  CMakeLists.txt  qwtconfig.pri
DigitalSignalViewer/data/signals/: signal-100-0.txt  signal-100-1.txt  signal-100-3.txt  signal-100-4.txt  signal-10K-0.txt  signal-10K-1.txt  signal-10K-3.txt  signal-10K-4.txt
DigitalSignalViewer/libs/qwt/: CMakeLists.txt  qwtconfig.pri
DigitalSignalViewer/libs/qwt/cmake/: qwt-config.cmake.in
DigitalSignalViewer/libs/qwt/examples/animation/: main.cpp  plot.cpp
DigitalSignalViewer/libs/qwt/examples/scatterplot/: scatterplot.pro
DigitalSignalViewer/libs/qwt/src/: qwt_plot_panner.h
DigitalSignalViewer/src/: customqwtmagnifier.cpp  customqwtmagnifier.h  customqwtplot.cpp  customqwtplot.h  customqwtplotpanner.cpp  customqwtplotpanner.h  customqwtscaledraw.cpp  customqwtscaledraw.h  digitalsignal.cpp  digitalsignal.h  digitalsignalviewerwidget.cpp  digitalsignalviewerwidget.h  legendlabel.cpp  legendlabel.h  legendwidget.cpp  legendwidget.h  main.cpp  scrollareawidget.cpp  scrollareawidget.h  syncer.cpp  syncer.h
FileAssociationManager/: .gitmodules  README.md
FileAssociationManager/assets/: resources.qrc
FileAssociationManager/libs/csv_parser/include/csv_parser/: csvdocument.h
FileAssociationManager/src/: FileAssociationManagerWidget.cpp  FileAssociationManagerWidget.h  FileDataHelpers.h  Record.h  fileDataHelpers.cpp  main.cpp  recordstablemodel.cpp  recordstablemodel.h  recordstableview.cpp  recordstableview.h
